--- a/.vscode/mod.csproj
+++ b/.vscode/mod.csproj
@@ -4,32 +4,33 @@
 		<TargetFramework>net472</TargetFramework>
 		<PlatformTarget>x64</PlatformTarget>
 
-		<!-- Modify [RootNamespace], [AssemblyName], [OutputPath], [VersionPrefix] -->
 		<RootNamespace>FarmingHysteresis</RootNamespace>
 		<AssemblyName>FarmingHysteresis</AssemblyName>
-		<OutputPath>../1.2/Assemblies</OutputPath>
+    	<OutputPath>../1.2/Assemblies</OutputPath>
 		<VersionPrefix>0.3</VersionPrefix>
 
-		<!-- do not generate pdb file -->
-		<DebugType>none</DebugType>
-
-		<DebugSymbols>false</DebugSymbols>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)' == 'RELEASE'">
+    	<DebugType>none</DebugType>
+		<DebugSymbols>false</DebugSymbols>
+    	<Optimize>true</Optimize>
+  	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)' == 'DEBUG'">
+    	<DebugType>full</DebugType>
+    	<Optimize>false</Optimize>
+		<DebugSymbols>true</DebugSymbols>
+  	</PropertyGroup>
 
  	<ItemGroup>
 	 	<!-- Mod -->
 	 	<Compile Include="../Source/**" />
-		
-	 	<!-- Rimworld -->
-	 	<Reference Include="../../../RimWorldWin64_Data/Managed/*.dll">
-			<Private>False</Private>
-		</Reference>
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Lib.Harmony" Version="2.0.0.7">
-			<Private>False</Private>
-		</PackageReference>
+		<PackageReference Include="Krafs.Rimworld.Ref" Version="1.2.2900" />
+		<PackageReference Include="Lib.Harmony" Version="2.0.0.7" />
 	</ItemGroup>
 </Project>
