--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Upload Mod Artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: FarmingHysteresis-${{ github.ref }}
+        name: FarmingHysteresis-Release
         path: |
           About/
           1.2/
@@ -48,7 +48,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set Environment Variables
-      run: echo "::set-env name=MOD_PATH::$HOME/FarmingHysteresis"
+      run: |
+        echo "MOD_PATH=$HOME/FarmingHysteresis" >> $GITHUB_ENV
+        echo "VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
     
     - name: Create Mod Folder
       run: mkdir -p ${{ env.MOD_PATH }}
@@ -56,7 +58,7 @@ jobs:
     - name: Download Mod Artifacts from Build Step
       uses: actions/download-artifact@v2
       with:
-        name: FarmingHysteresis-${{ github.ref }}
+        name: FarmingHysteresis-Release
         path: ${{ env.MOD_PATH }}
     - name: Zip Mod
       run: | 
@@ -68,8 +70,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ env.VERSION }}
+        release_name: Release ${{ env.VERSION }}
         draft: false
         prerelease: false
     - name: Upload Release Asset
@@ -79,5 +81,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ${{ env.MOD_PATH }}.zip
-        asset_name: FarmingHysteresis-${{ github.ref }}.zip
+        asset_name: FarmingHysteresis-${{ env.VERSION }}.zip
         asset_content_type: application/zip
