--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,13 +10,12 @@
             "request": "launch",
             "preLaunchTask": "build dll",
             "args": [],
-            "program": "../../RimWorldWin64.exe",
+            "program": "C:/Program Files (x86)/Steam/steamapps/common/RimWorld/RimWorldWin64.exe",
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
-            "internalConsoleOptions":"neverOpen",
+            "internalConsoleOptions": "neverOpen",
             "stopAtEntry": true
         },
-
         { // ignore
             "name": ".NET Framework Attach",
             "type": "clr",
