Add system for setting global hysteresis values
Adds main tab and configuration window for setting global hysteresis values

Closes #9

--- a/.vscode/mod.csproj
+++ b/.vscode/mod.csproj
@@ -3,6 +3,7 @@
 		<OutputType>Library</OutputType>
 		<TargetFramework>net472</TargetFramework>
 		<PlatformTarget>x64</PlatformTarget>
+        <LangVersion>9.0</LangVersion>
 
 		<RootNamespace>FarmingHysteresis</RootNamespace>
 		<AssemblyName>FarmingHysteresis</AssemblyName>
