--- a/.vscode/mod.csproj
+++ b/.vscode/mod.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net472</TargetFramework>
 		<PlatformTarget>x64</PlatformTarget>
         <LangVersion>9.0</LangVersion>
+        <Nullable>enable</Nullable>
 
 		<RootNamespace>FarmingHysteresis</RootNamespace>
 		<AssemblyName>FarmingHysteresis</AssemblyName>
