Move source files into subdirectory
In preparation for more assemblies to come

--- a/.vscode/mod.csproj
+++ b/.vscode/mod.csproj
@@ -28,7 +28,7 @@
 
     <ItemGroup>
         <!-- Mod -->
-        <Compile Include="../Source/**" />
+        <Compile Include="../Source/FarmingHysteresis/**" />
     </ItemGroup>
 
     <ItemGroup>
