feat: build for 1.3, 1.4 and 1.5

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,15 +1,15 @@
 {
     "version": "2.0.0",
     "tasks": [
-		{
-			"label": "build dll",
-			"type": "shell",
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
-			"command": ".vscode/build.bat",
-			"problemMatcher": []
-		}
-	]
+        {
+            "label": "build dll",
+            "type": "shell",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "command": ".vscode/build.ps1",
+            "problemMatcher": []
+        }
+    ]
 }
