--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,23 @@ jobs:
               with:
                   dotnet-version: 6.0.x
 
-            - name: Install Mod Dependencies
-              run: dotnet restore .vscode
+            # - name: Install Mod Dependencies
+            #   run: dotnet restore .vscode
 
-            - name: Build Mod
-              run: dotnet build .vscode --configuration Release --no-restore
+            - name: Build Mod for 1.3
+              env:
+                  RimWorldVersion: 1.3
+              run: dotnet build .vscode --configuration Release
+
+            - name: Build Mod for 1.4
+              env:
+                  RimWorldVersion: 1.4
+              run: dotnet build .vscode --configuration Release
+
+            - name: Build Mod for 1.5
+              env:
+                  RimWorldVersion: 1.5
+              run: dotnet build .vscode --configuration Release
 
             - name: Upload Mod Artifacts
               uses: actions/upload-artifact@v3
@@ -43,7 +55,10 @@ jobs:
                   name: FarmingHysteresis-${{ github.sha }}
                   path: |
                       About/
+                      1.3/
                       1.4/
+                      1.5/
+                      Common/
                       LICENSE
                       LICENSE.Apache-2.0
                       LICENSE.MIT
@@ -51,4 +66,3 @@ jobs:
                       CHANGELOG.md
                       !**/.*
                       !About/Preview.pdn
-                      !1.4/Assemblies/0Harmony.dll
