--- a/.vscode/mod.csproj
+++ b/.vscode/mod.csproj
@@ -8,19 +8,18 @@
 
         <RootNamespace>FarmingHysteresis</RootNamespace>
         <AssemblyName>FarmingHysteresis</AssemblyName>
-        <OutputPath>../1.4/Assemblies</OutputPath>
         <VersionPrefix>0.6.0</VersionPrefix>
 
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)' == 'RELEASE'">
+    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
         <DebugType>none</DebugType>
         <DebugSymbols>false</DebugSymbols>
         <Optimize>true</Optimize>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)' == 'DEBUG'">
+    <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
         <DebugType>full</DebugType>
         <Optimize>false</Optimize>
         <DebugSymbols>true</DebugSymbols>
@@ -31,8 +30,46 @@
         <Compile Include="../Source/FarmingHysteresis/**" />
     </ItemGroup>
 
+    <Choose>
+        <When Condition="'$(RimWorldVersion)' == '1.3'">
+            <PropertyGroup>
+                <DefineConstants>$(DefineConstants);v1_3</DefineConstants>
+                <OutputPath>../1.3/Assemblies</OutputPath>
+            </PropertyGroup>
+            <ItemGroup>
+                <PackageReference Include="Krafs.Rimworld.Ref" Version="1.3.*-*">
+                    <ExcludeAssets>runtime</ExcludeAssets>
+                </PackageReference>
+            </ItemGroup>
+        </When>
+        <When Condition="'$(RimWorldVersion)' == '1.4'">
+            <PropertyGroup>
+                <DefineConstants>$(DefineConstants);v1_4</DefineConstants>
+                <OutputPath>../1.4/Assemblies</OutputPath>
+            </PropertyGroup>
+            <ItemGroup>
+                <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.*-*">
+                    <ExcludeAssets>runtime</ExcludeAssets>
+                </PackageReference>
+            </ItemGroup>
+        </When>
+        <When Condition="'$(RimWorldVersion)' == '1.5'">
+            <PropertyGroup>
+                <DefineConstants>$(DefineConstants);v1_5</DefineConstants>
+                <OutputPath>../1.5/Assemblies</OutputPath>
+            </PropertyGroup>
+            <ItemGroup>
+                <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.*-*">
+                    <ExcludeAssets>runtime</ExcludeAssets>
+                </PackageReference>
+            </ItemGroup>
+        </When>
+    </Choose>
+
     <ItemGroup>
-        <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.3580" />
-        <PackageReference Include="Lib.Harmony" Version="2.2.2" />
+        <!-- <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.3580" /> -->
+        <PackageReference Include="Lib.Harmony" Version="2.2.2">
+            <ExcludeAssets>runtime</ExcludeAssets>
+        </PackageReference>
     </ItemGroup>
 </Project>
