--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,49 +9,9 @@ on:
 
 jobs:
     build:
-        name: Build
-        runs-on: windows-latest
-        steps:
-            - name: Checkout Repository
-              uses: actions/checkout@v3
-
-            - name: Setup Dotnet
-              uses: actions/setup-dotnet@v3
-              with:
-                  dotnet-version: 6.0.x
-
-            - name: Build Mod for 1.3
-              env:
-                  RimWorldVersion: 1.3
-              run: dotnet build .vscode --configuration Release
-
-            - name: Build Mod for 1.4
-              env:
-                  RimWorldVersion: 1.4
-              run: dotnet build .vscode --configuration Release
-
-            - name: Build Mod for 1.5
-              env:
-                  RimWorldVersion: 1.5
-              run: dotnet build .vscode --configuration Release
-
-            - name: Upload Mod Artifacts
-              uses: actions/upload-artifact@v3
-              with:
-                  name: FarmingHysteresis-Release
-                  path: |
-                      About/
-                      1.3/
-                      1.4/
-                      1.5/
-                      Common/
-                      LICENSE
-                      LICENSE.Apache-2.0
-                      LICENSE.MIT
-                      README.md
-                      CHANGELOG.md
-                      !**/.*
-                      !About/Preview.pdn
+        uses: ./.github/workflows/build.yml
+        with:
+            artifact-suffix: Release
 
     package:
         name: Release
