--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,10 @@
             "request": "launch",
             "preLaunchTask": "build dll",
             "args": [
-                "-savedatafolder=${workspaceFolder}\\.savedatafolder",
+                "-savedatafolder=${workspaceFolder}\\.savedatafolder\\${input:rimWorldVersion}",
                 //"-quicktest",
             ],
-            "program": "C:/Program Files (x86)/Steam/steamapps/common/RimWorld/RimWorldWin64.exe",
+            "program": "D://RimWorld/${input:rimWorldVersion}/RimWorldWin64.exe",
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
             "internalConsoleOptions": "neverOpen",
@@ -31,6 +31,19 @@
                 "searchMicrosoftSymbolServer": false,
                 "searchNuGetOrgSymbolServer": false
             }
+        }
+    ],
+    "inputs": [
+        {
+            "id": "rimWorldVersion",
+            "type": "pickString",
+            "description": "Rimworld version to launch?",
+            "options": [
+                "1.5",
+                "1.4",
+                "1.3",
+            ],
+            "default": "1.5"
         }
     ]
 }
