--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ jobs:
     build:
         name: Build
         runs-on: windows-latest
+        env:
+            RimWorldSteamWorkshopFolderPath: ..\.deps\refs
         steps:
             - name: Checkout Repository
               uses: actions/checkout@v4
@@ -20,23 +22,26 @@ jobs:
               with:
                   dotnet-version: 6.0.x
 
-            # - name: Install Mod Dependencies
-            #   run: dotnet restore .vscode
-
             - name: Build Mod for 1.3
               env:
                   RimWorldVersion: 1.3
-              run: dotnet build .vscode --configuration Release
+              run: |
+                  dotnet build --configuration Release .vscode/mod.csproj
+                  dotnet build --configuration Release .vscode/vanillaplantsexpandedmoreplants.interop.csproj
 
             - name: Build Mod for 1.4
               env:
                   RimWorldVersion: 1.4
-              run: dotnet build .vscode --configuration Release
+              run: |
+                  dotnet build --configuration Release .vscode/mod.csproj
+                  dotnet build --configuration Release .vscode/vanillaplantsexpandedmoreplants.interop.csproj
 
             - name: Build Mod for 1.5
               env:
                   RimWorldVersion: 1.5
-              run: dotnet build .vscode --configuration Release
+              run: |
+                  dotnet build --configuration Release .vscode/mod.csproj
+                  dotnet build --configuration Release .vscode/vanillaplantsexpandedmoreplants.interop.csproj
 
             - name: Upload Mod Artifacts
               uses: actions/upload-artifact@v4
@@ -47,11 +52,17 @@ jobs:
                       1.3/
                       1.4/
                       1.5/
+                      1.3_VanillaPlantsExpandedMorePlants/
+                      1.5_VanillaPlantsExpandedMorePlants/
+                      1.4_VanillaPlantsExpandedMorePlants/
                       Common/
                       LICENSE
                       LICENSE.Apache-2.0
                       LICENSE.MIT
                       README.md
                       CHANGELOG.md
+                      LoadFolders.xml
                       !**/.*
-                      !About/Preview.pdn
+                      !About/*.pdn
+                      !About/*.svg
+                      !About/*.ttf
