--- a/.vscode/vanillaplantsexpandedmoreplants.interop.csproj
+++ b/.vscode/vanillaplantsexpandedmoreplants.interop.csproj
@@ -6,15 +6,16 @@
         <LangVersion>10.0</LangVersion>
         <Nullable>enable</Nullable>
 
-        <RootNamespace>FarmingHysteresis</RootNamespace>
-        <AssemblyName>FarmingHysteresis</AssemblyName>
+        <RootNamespace>FarmingHysteresis.VanillaPlantsExpandedMorePlants</RootNamespace>
+        <AssemblyName>FarmingHysteresis.VanillaPlantsExpandedMorePlants</AssemblyName>
         <VersionPrefix>0.7.0</VersionPrefix>
 
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 
-        <!-- Intellisense doesn't work without specifying this explicitly -->
-        <!-- !! Don't check in with this uncommented !! -->
-        <!-- <RimWorldVersion>1.5</RimWorldVersion> -->
+        <!-- Intellisense doesn't work without specifying these explicitly -->
+        <!-- !! Don't check in with these uncommented !! -->
+        <!-- <RimWorldSteamWorkshopFolderPath>C:\Program Files (x86)\Steam\steamapps\workshop\content\294100</RimWorldSteamWorkshopFolderPath>
+        <RimWorldVersion>1.5</RimWorldVersion> -->
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)' == 'Release'">
@@ -31,17 +32,17 @@
 
     <ItemGroup>
         <!-- Mod -->
-        <Compile Include="../Source/FarmingHysteresis/**" />
+        <Compile Include="../Source/FarmingHysteresis.VanillaPlantsExpandedMorePlants/**" />
     </ItemGroup>
 
     <Choose>
-        <When Condition="'$(RimWorldVersion)' == '1.3'">
+        <When Condition="'$(RimWorldVersion)' == '1.5'">
             <PropertyGroup>
-                <DefineConstants>$(DefineConstants);v1_3</DefineConstants>
-                <OutputPath>../1.3/Assemblies</OutputPath>
+                <DefineConstants>$(DefineConstants);v1_5</DefineConstants>
+                <OutputPath>../1.5_VanillaPlantsExpandedMorePlants/Assemblies</OutputPath>
             </PropertyGroup>
             <ItemGroup>
-                <PackageReference Include="Krafs.Rimworld.Ref" Version="1.3.*-*">
+                <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.*-*">
                     <ExcludeAssets>runtime</ExcludeAssets>
                 </PackageReference>
             </ItemGroup>
@@ -49,7 +50,7 @@
         <When Condition="'$(RimWorldVersion)' == '1.4'">
             <PropertyGroup>
                 <DefineConstants>$(DefineConstants);v1_4</DefineConstants>
-                <OutputPath>../1.4/Assemblies</OutputPath>
+                <OutputPath>../1.4_VanillaPlantsExpandedMorePlants/Assemblies</OutputPath>
             </PropertyGroup>
             <ItemGroup>
                 <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.*-*">
@@ -57,13 +58,13 @@
                 </PackageReference>
             </ItemGroup>
         </When>
-        <When Condition="'$(RimWorldVersion)' == '1.5'">
+        <When Condition="'$(RimWorldVersion)' == '1.3'">
             <PropertyGroup>
-                <DefineConstants>$(DefineConstants);v1_5</DefineConstants>
-                <OutputPath>../1.5/Assemblies</OutputPath>
+                <DefineConstants>$(DefineConstants);v1_3</DefineConstants>
+                <OutputPath>../1.3_VanillaPlantsExpandedMorePlants/Assemblies</OutputPath>
             </PropertyGroup>
             <ItemGroup>
-                <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.*-*">
+                <PackageReference Include="Krafs.Rimworld.Ref" Version="1.3.*-*">
                     <ExcludeAssets>runtime</ExcludeAssets>
                 </PackageReference>
             </ItemGroup>
@@ -74,5 +75,14 @@
         <PackageReference Include="Lib.Harmony" Version="2.2.2">
             <ExcludeAssets>runtime</ExcludeAssets>
         </PackageReference>
+        <ProjectReference Include=".\mod.csproj">
+            <CopyLocal>False</CopyLocal>
+            <Private>false</Private>
+        </ProjectReference>
+        <Reference Include="VanillaPlantsExpandedMorePlants">
+            <HintPath>$(RimWorldSteamWorkshopFolderPath)\2748889667\$(RimWorldVersion)\Assemblies\VanillaPlantsExpandedMorePlants.dll</HintPath>
+            <CopyLocal>False</CopyLocal>
+            <Private>false</Private>
+        </Reference>
     </ItemGroup>
 </Project>
