style: update graphics

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,6 @@ jobs:
                       CHANGELOG.md
                       LoadFolders.xml
                       !**/.*
-                      !About/*.pdn
-                      !About/*.svg
-                      !About/*.ttf
+                      !**/*.pdn
+                      !**/*.svg
+                      !**/*.ttf
