--- a/.vscode/mod.csproj
+++ b/.vscode/mod.csproj
@@ -13,8 +13,7 @@
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 
         <!-- Intellisense doesn't work without specifying this explicitly -->
-        <!-- !! Don't check in with this uncommented !! -->
-        <!-- <RimWorldVersion>1.5</RimWorldVersion> -->
+        <RimWorldVersion Condition="'$(RimWorldVersion)'==''">1.5</RimWorldVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)' == 'Release'">
