--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,9 @@
             "type": "clr",
             "request": "launch",
             "preLaunchTask": "build ${input:rimWorldVersion}",
+            "env": {
+                "HARMONY_LOG_FILE": "${workspaceFolder}\\.savedatafolder\\${input:rimWorldVersion}\\Harmony.log"
+            },
             "args": [
                 "-savedatafolder=${workspaceFolder}\\.savedatafolder\\${input:rimWorldVersion}",
                 //"-quicktest",
