--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
         name: Build
         runs-on: windows-latest
         env:
-            RimWorldSteamWorkshopFolderPath: ..\.deps\refs
+            RimWorldSteamWorkshopFolderPath: ..\..\.deps\refs
         steps:
             - name: Checkout Repository
               uses: actions/checkout@v4
@@ -22,26 +22,23 @@ jobs:
               with:
                   dotnet-version: 8.0.x
 
-            - name: Build Mod for 1.3
+            - name: Build Mod for 1.5
               env:
-                  RimWorldVersion: 1.3
+                  RimWorldVersion: 1.5
               run: |
-                  dotnet build --configuration Release .vscode/mod.csproj
-                  dotnet build --configuration Release .vscode/vanillaplantsexpandedmoreplants.interop.csproj
+                  dotnet build --configuration Release FarmingHysteresis.sln
 
             - name: Build Mod for 1.4
               env:
                   RimWorldVersion: 1.4
               run: |
-                  dotnet build --configuration Release .vscode/mod.csproj
-                  dotnet build --configuration Release .vscode/vanillaplantsexpandedmoreplants.interop.csproj
+                  dotnet build --configuration Release FarmingHysteresis.sln
 
-            - name: Build Mod for 1.5
+            - name: Build Mod for 1.3
               env:
-                  RimWorldVersion: 1.5
+                  RimWorldVersion: 1.3
               run: |
-                  dotnet build --configuration Release .vscode/mod.csproj
-                  dotnet build --configuration Release .vscode/vanillaplantsexpandedmoreplants.interop.csproj
+                  dotnet build --configuration Release FarmingHysteresis.sln
 
             - name: Upload Mod Artifacts
               uses: actions/upload-artifact@v4
@@ -49,12 +46,12 @@ jobs:
                   name: FarmingHysteresis-${{ inputs.artifact-suffix }}
                   path: |
                       About/
-                      1.3/
-                      1.4/
                       1.5/
-                      1.3_VanillaPlantsExpandedMorePlants/
+                      1.4/
+                      1.3/
                       1.5_VanillaPlantsExpandedMorePlants/
                       1.4_VanillaPlantsExpandedMorePlants/
+                      1.3_VanillaPlantsExpandedMorePlants/
                       Common/
                       LICENSE
                       LICENSE.Apache-2.0
