--- a/Source/FarmingHysteresis.VanillaPlantsExpandedMorePlants/FarmingHysteresis.VanillaPlantsExpandedMorePlants.csproj
+++ b/Source/FarmingHysteresis.VanillaPlantsExpandedMorePlants/FarmingHysteresis.VanillaPlantsExpandedMorePlants.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>Library</OutputType>
-        <TargetFramework>net472</TargetFramework>
+        <TargetFramework>net481</TargetFramework>
         <PlatformTarget>x64</PlatformTarget>
         <LangVersion>12.0</LangVersion>
         <Nullable>enable</Nullable>
@@ -17,64 +17,48 @@
         <RimWorldVersion Condition="'$(RimWorldVersion)'==''">1.5</RimWorldVersion>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <OutputPath>../../$(RimWorldVersion)_VanillaPlantsExpandedMorePlants/Assemblies</OutputPath>
+    </PropertyGroup>
+
     <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-        <DebugType>none</DebugType>
-        <DebugSymbols>false</DebugSymbols>
+        <DebugType>portable</DebugType>
         <Optimize>true</Optimize>
+        <DebugSymbols>false</DebugSymbols>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
-        <DebugType>full</DebugType>
+        <DebugType>portable</DebugType>
         <Optimize>false</Optimize>
         <DebugSymbols>true</DebugSymbols>
     </PropertyGroup>
-
-    <ItemGroup>
-        <!-- Mod -->
-        <Compile Include="../Source/FarmingHysteresis.VanillaPlantsExpandedMorePlants/**" />
-    </ItemGroup>
 
     <Choose>
         <When Condition="'$(RimWorldVersion)' == '1.5'">
             <PropertyGroup>
                 <DefineConstants>$(DefineConstants);v1_5</DefineConstants>
-                <OutputPath>../1.5_VanillaPlantsExpandedMorePlants/Assemblies</OutputPath>
             </PropertyGroup>
-            <ItemGroup>
-                <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.*-*">
-                    <ExcludeAssets>runtime</ExcludeAssets>
-                </PackageReference>
-            </ItemGroup>
         </When>
         <When Condition="'$(RimWorldVersion)' == '1.4'">
             <PropertyGroup>
                 <DefineConstants>$(DefineConstants);v1_4</DefineConstants>
-                <OutputPath>../1.4_VanillaPlantsExpandedMorePlants/Assemblies</OutputPath>
             </PropertyGroup>
-            <ItemGroup>
-                <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.*-*">
-                    <ExcludeAssets>runtime</ExcludeAssets>
-                </PackageReference>
-            </ItemGroup>
         </When>
         <When Condition="'$(RimWorldVersion)' == '1.3'">
             <PropertyGroup>
                 <DefineConstants>$(DefineConstants);v1_3</DefineConstants>
-                <OutputPath>../1.3_VanillaPlantsExpandedMorePlants/Assemblies</OutputPath>
             </PropertyGroup>
-            <ItemGroup>
-                <PackageReference Include="Krafs.Rimworld.Ref" Version="1.3.*-*">
-                    <ExcludeAssets>runtime</ExcludeAssets>
-                </PackageReference>
-            </ItemGroup>
         </When>
     </Choose>
 
     <ItemGroup>
-        <PackageReference Include="Lib.Harmony" Version="2.2.2">
+        <PackageReference Include="Lib.Harmony" Version="2.3.3">
             <ExcludeAssets>runtime</ExcludeAssets>
         </PackageReference>
-        <ProjectReference Include=".\mod.csproj">
+        <PackageReference Include="Krafs.Rimworld.Ref" Version="$(RimWorldVersion).*">
+            <ExcludeAssets>runtime</ExcludeAssets>
+        </PackageReference>
+        <ProjectReference Include="..\FarmingHysteresis\FarmingHysteresis.csproj">
             <CopyLocal>False</CopyLocal>
             <Private>false</Private>
         </ProjectReference>
