--- a/Source/FarmingHysteresis/FarmingHysteresis.csproj
+++ b/Source/FarmingHysteresis/FarmingHysteresis.csproj
@@ -6,6 +6,13 @@
         <LangVersion>12.0</LangVersion>
         <Nullable>enable</Nullable>
 
+        <EnableNETAnalyzers>True</EnableNETAnalyzers>
+        <AnalysisLevel>preview-all</AnalysisLevel>
+        <ErrorReport>prompt</ErrorReport>
+        <WarningLevel>5</WarningLevel>
+
+        <NoWarn>CA1707;CA2201</NoWarn>
+
         <RootNamespace>FarmingHysteresis</RootNamespace>
         <AssemblyName>FarmingHysteresis</AssemblyName>
         <VersionPrefix>0.8.2</VersionPrefix>
@@ -56,6 +63,10 @@
         </PackageReference>
         <PackageReference Include="Krafs.Rimworld.Ref" Version="$(RimWorldVersion).*">
             <ExcludeAssets>runtime</ExcludeAssets>
+        </PackageReference>
+        <PackageReference Include="Nullable" Version="1.3.1">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
     </ItemGroup>
 </Project>
