--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,14 +72,14 @@ jobs:
                   escape-quotes: true
                   markdown: ${{ steps.changelog_reader.outputs.changes }}
 
-            # - name: Upload to Steam Workshop
-            #   uses: ZehMatt/steam-workshop-upload@569de82c2fdf3042af8491379fb698829ba63a9d
-            #   with:
-            #       appid: 294100
-            #       itemid: 2431191516
-            #       path: ${{ env.MOD_PATH }}
-            #       changenote: ${{ steps.markdown_steam.outputs.steam-markup }}
-            #   env:
-            #       STEAM_USERNAME: ${{ secrets.STEAM_USERNAME }}
-            #       STEAM_PASSWORD: ${{ secrets.STEAM_PASSWORD }}
-            #       STEAM_TFASEED: ${{ secrets.STEAM_TFASEED }}
+            - name: Upload to Steam Workshop
+              uses: ZehMatt/steam-workshop-upload@569de82c2fdf3042af8491379fb698829ba63a9d
+              with:
+                  appid: 294100
+                  itemid: 2431191516
+                  path: ${{ env.MOD_PATH }}
+                  changenote: ${{ steps.markdown_steam.outputs.steam-markup }}
+              env:
+                  STEAM_USERNAME: ${{ secrets.STEAM_USERNAME }}
+                  STEAM_PASSWORD: ${{ secrets.STEAM_PASSWORD }}
+                  STEAM_TFASEED: ${{ secrets.STEAM_TFASEED }}
