--- a/Source/FarmingHysteresis.VanillaPlantsExpandedMorePlants/FarmingHysteresis.VanillaPlantsExpandedMorePlants.csproj
+++ b/Source/FarmingHysteresis.VanillaPlantsExpandedMorePlants/FarmingHysteresis.VanillaPlantsExpandedMorePlants.csproj
@@ -13,7 +13,7 @@
 
         <RootNamespace>FarmingHysteresis.VanillaPlantsExpandedMorePlants</RootNamespace>
         <AssemblyName>FarmingHysteresis.VanillaPlantsExpandedMorePlants</AssemblyName>
-        
+
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 
         <ProjectDependenciesBasePath Condition="'$(ProjectDependenciesBasePath)'==''">..\..\..</ProjectDependenciesBasePath>
@@ -37,34 +37,50 @@
     </PropertyGroup>
 
     <Choose>
-        <When Condition="'$(RimWorldVersion)' == '1.6'">
+        <When Condition="'$(RimWorldVersion)' == '1.3'">
             <PropertyGroup>
-                <NoBuild>true</NoBuild>
-                <DefineConstants>$(DefineConstants);v1_6</DefineConstants>
+                <DefineConstants>$(DefineConstants);v1_3</DefineConstants>
             </PropertyGroup>
-        </When>
-        <When Condition="'$(RimWorldVersion)' == '1.5'">
-            <PropertyGroup>
-                <DefineConstants>$(DefineConstants);v1_5</DefineConstants>
-            </PropertyGroup>
+            <ItemGroup>
+                <PackageReference Include="Lib.Harmony" Version="[2.2.2]">
+                    <ExcludeAssets>runtime</ExcludeAssets>
+                </PackageReference>
+            </ItemGroup>
         </When>
         <When Condition="'$(RimWorldVersion)' == '1.4'">
             <PropertyGroup>
                 <DefineConstants>$(DefineConstants);v1_4</DefineConstants>
             </PropertyGroup>
+            <ItemGroup>
+                <PackageReference Include="Lib.Harmony" Version="[2.2.2]">
+                    <ExcludeAssets>runtime</ExcludeAssets>
+                </PackageReference>
+            </ItemGroup>
         </When>
-        <When Condition="'$(RimWorldVersion)' == '1.3'">
+        <When Condition="'$(RimWorldVersion)' == '1.5'">
             <PropertyGroup>
-                <DefineConstants>$(DefineConstants);v1_3</DefineConstants>
+                <DefineConstants>$(DefineConstants);v1_5</DefineConstants>
             </PropertyGroup>
+            <ItemGroup>
+                <PackageReference Include="Lib.Harmony" Version="[2.3.3]">
+                    <ExcludeAssets>runtime</ExcludeAssets>
+                </PackageReference>
+            </ItemGroup>
+        </When>
+        <When Condition="'$(RimWorldVersion)' == '1.6'">
+            <PropertyGroup>
+                <DefineConstants>$(DefineConstants);v1_6</DefineConstants>
+            </PropertyGroup>
+            <ItemGroup>
+                <PackageReference Include="Lib.Harmony" Version="2.3.6">
+                    <ExcludeAssets>runtime</ExcludeAssets>
+                </PackageReference>
+            </ItemGroup>
         </When>
     </Choose>
 
     <ItemGroup>
-        <PackageReference Include="Lib.Harmony" Version="2.3.3">
-            <ExcludeAssets>runtime</ExcludeAssets>
-        </PackageReference>
-        <PackageReference Include="Krafs.Rimworld.Ref" Version="$(RimWorldVersion).*-*">
+        <PackageReference Include="Krafs.Rimworld.Ref" Version="$(RimWorldVersion).*">
             <ExcludeAssets>runtime</ExcludeAssets>
         </PackageReference>
         <ProjectReference Include="..\FarmingHysteresis\FarmingHysteresis.csproj">
